--- a/draftapp-client/index.html
+++ b/draftapp-client/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
+
+    <!-- import CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
+
   </head>
   <body>
     <div id="app"></div>
+    <!-- import JavaScript -->
+    <script src="https://unpkg.com/element-plus"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
